Fixing navbar alignment

--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -9,14 +9,22 @@ li{
     list-style: none;
     display: flex;
     align-items: center;
+    margin: 11px 0;
 }
 li span{
     margin:  10px;
 }
 
+li:hover {
+    cursor: pointer;
+}
+
 ul{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .navbar{
@@ -41,7 +49,7 @@ ul{
 .space-y-96{
     margin: 20px;
 }
-.logout{
-    display: flex;
-   margin-top: 150%;
+
+.logout {
+    margin: 20px 0;
 }
